<resources>
    <string name="app_name">ShroomScan</string>
    <string name="searchbar_hint">Search Mushroom</string>
    <string name="explore">Explore</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="fungus_scan">Fungus Scan</string>
    <string name="fungus_scan_info">Find out whether mushroom...</string>
    <string name="recipe">Recipe</string>
    <string name="recipe_info">Search Mushroom Recipes...</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="News">judul</string>
    <string name="link">link</string>
    <string name="title_favorite">Favorite</string>
    <string name="name_fungus">Jamur tiram</string>
    <string name="detail_fungus">Non-toxic</string>
    <string name="detail_introduction">Jamur tiram adalah jamur pangan dari kelompok Basidiomycota dan termasuk kelas Homobasidiomycetes dengan ciri-ciri umum tubuh buah berwarna putih hingga krem dan tudungnya berbentuk setengah lingkaran mirip cangkang tiram dengan bagian tengah agak cekung. Tubuh buah jamur tiram memiliki tangkai yang tumbuh menyamping (bahasa Latin: pleurotus) dan bentuknya seperti tiram (ostreatus) sehingga jamur tiram mempunyai nama binomial Pleurotus ostreatus.[2] Bagian tudung dari jamur tersebut berubah warna dari hitam, abu-abu, coklat, hingga putih, dengan permukaan yang hampir licin, diameter 5–20 cm yang bertepi tudung mulus sedikit berlekuk.[1] Selain itu, jamur tiram juga memiliki spora berbentuk batang berukuran serta miselia berwarna putih yang bisa tumbuh dengan cepat</string>
    <string name="_introduction">Introduction</string>
    <string name="_planting">Planting media and Composition</string>
    <string name="detail_planting">Media tanam Pleurotus ostreatus yang digunakan adalah jerami yang dicampur dengan air, dedak 10% dan kapur 1%.[13] Fungsi dari jerami adalah sebagai bahan dasar dari pertumbuhan jamur. Jerami mengandung lignin, selulosa, karbohidrat, dan serat yang dapat didegradasi oleh jamur menjadi karbohidrat yang kemudian dapat digunakan untuk sintesis protein.[13] Air pada jerami berfungsi sebagai pembentuk kelembapan dan sumber air bagi pertunbuhan jamur.[13] Dedak dan kapur merupakan bahan tambahan pada media tanam Pleurotus ostreatus.[13] Dedak ditambahkan pada media untuk meningkatkan nutrisi media tanam, terutama sebagai sumber karbohidrat, karbon, dan nitrogen.[13] Kapur merupakan sumber kalsium bagi pertumbuhan jamur.[5] Selain itu juga kapur berfungsi untuk mengatur pH media pertumbuhan jamur.[13]</string>
    <string name="btn_left">button left</string>
    <string name="gambar_detail">gambar deskripsion</string>
    <string name="get_result">Get Result</string>
    <string name="recipe_name">Jamur tiram pedas</string>
    <string name="recipe_description">500 gram jamur tiram putih\", \"5 buah bawang merah\",\" 3 buah bawang putih\", \"10 buah cabe rawit merah (boleh di skip jika tidak suka pedas)\", \"2 sdm kecap manis\",\" 1 sdm gula pasir\",\"2 sdm kaldu bubuk\"</string>
    <string name="_recipe">Bahan-Bahan :</string>
    <string name="time">waktu</string>
    <string name="waktu_masak">10 menit</string>
    <string name="_porsi">4 porsi</string>
    <string name="detail_bahan">500 gram jamur tiram putih\n5 buah bawang merah\n3 buah bawang putih\n10 buah cabe rawit merah (boleh di skip jika tidak suka pedas)\n2 sdm kecap manis\n1 sdm gula pasir\n2 sdm kaldu bubuk\n</string>
    <string name="cara_membuat">Cara Membuat :</string>
    <string name="detail_recipe"> 1. Pertama cuci bersih jamur nya lalu sisih kan.\n\n2. siap kan bawang2an dan cabe2an dihalus kan lalu sisihkan.\n\n3. Panas kan sedikit minyak lalu tumis bumbu halus tadi hingga harum.\n\n4. kemudian masukan gula merah td sampai gula nya larut.\n\n5. Setelah semua bumbu menyatu dan harum masukan jamur tiram berikan kaldu bubuk dan gula pasir juga kecap manis aduk hingga rata.\n\n6. oh ya disini jamur tiram akan mengeluarkan air ya masak hingga jamur layu jd masak sampai airnya agak berkurang.\n\n7. Jangan lupa tes rasa jika ada yg kurang pas boleh di tambah sesuai selera bunda ya...setelah jamur matang dan layu angkat dan sajikan.\n\n8. Selamat mencoba ya bund</string>
    <string name="favorite">Favorite</string>
    <string name="searchbar_recipe">Searching recipe...</string>
    <string name="retry">Retry</string>
    <string name="welcome">Mushrooms are a natural food that is rich in nutrients and provides various benefits for our health</string>
    <string name="welcome_">Mushrooms, a source of health and deliciousness in every bite.</string>
    <string name="start">Let’s Start</string>
    <string name="judul">ShroomScan</string>
    <string name="result_jenis">Name :</string>
    <string name="result_name">Nama Jamur</string>
    <string name="result_">Result :</string>
    <string name="result_persentase">100%</string>
    <string name="result_persentase_">Score :</string>
    <string name="result_desc">Deskripsi</string>
    <string name="index0">Ganoderma applanatum adalah jamur parasit dan saprofit yang tumbuh di kayu pohon hidup dan mati, dengan tubuh buah berukuran 3-30 cm lebar dan 1-10 cm panjang, keras seperti kulit, dan bertekstur kayu. Awalnya putih, tubuh buah berubah menjadi merah kecokelatan dan ditutupi konidia berwarna coklat kemerahan. Tubuh buahnya abadi, bertahan selama beberapa tahun dan bertambah besar dengan lapisan pori-pori baru setiap tahunnya, sehingga umurnya bisa ditentukan seperti cincin pohon. Spora coklatnya tersebar dari pori-pori bagian bawah, dengan sebanyak 4,65 miliar spora dari bagian berukuran 10 cm x 10 cm dalam 24 jam. Tubuh buah memiliki tabung berukuran 4-12 mm yang berakhir di pori-pori bulat dengan 4-6 per mm.
             </string>
    <string name="index1">Ganoderma oregonense adalah jamur polipore berukuran sedang hingga sangat besar yang termasuk dalam keluarga Ganodermataceae. Jamur ini juga dikenal dengan nama Western Varnished Conk, Oregon Reishi, atau Oregon Ling chi. Ganoderma oregonense memiliki warna merah coklat ke ungu coklat, dengan batang inang yang memiliki warna serupa. Jamur ini tidak memiliki batang dan berbentuk setengah lingkaran atau kipas. Permukaan tutup jamur ini berkilau dan berlapis pernis, dan pada spesimen yang lebih tua, kerak pernisnya seringkali retak secara ekstensif. Permukaan pori jamur ini berwarna krem dan berubah menjadi kecokelatan saat dihancurkan atau dikeringkan. Daging tutup jamur ini bisa agak tebal, lembut, berserat, dan putih.</string>
    <string name="index2">Coprinellus micaceus, yang dikenal sebagai mica cap, glistening inky cap, atau shiny cap, adalah spesies jamur dari keluarga Psathyrellaceae dengan distribusi kosmopolitan. Tubuh buahnya biasanya tumbuh berkelompok di atau dekat tunggul pohon kayu keras yang membusuk atau akar pohon yang terkubur. Tergantung pada tahap perkembangannya, tutup jamur berwarna coklat kekuningan ini dapat berbentuk oval, lonceng, atau cembung, dan mencapai diameter hingga 3 cm. Tutupnya, yang ditandai dengan alur radial atau linear halus yang hampir mencapai pusat, berdiri di atas tangkai putih hingga 10 cm panjangnya. Pada spesimen muda, seluruh permukaan tutup dilapisi dengan lapisan tipis sel-sel berkilau seperti mika. Meskipun kecil dan berdaging tipis, jamur ini biasanya tumbuh berlimpah karena mereka biasanya tumbuh dalam kelompok yang padat. Beberapa jam setelah dipetik, insang akan mulai larut perlahan menjadi cairan hitam berisi spora—proses enzimatik yang disebut autodigestion atau deliquescence. Tubuh buah ini dapat dimakan sebelum insangnya menghitam dan larut, dan memasaknya akan menghentikan proses autodigestion.
        \n\n
        Karakteristik mikroskopis dan sitogenetika C. micaceus telah diketahui dengan baik, dan jamur ini sering digunakan sebagai organisme model untuk mempelajari pembelahan sel dan meiosis pada basidiomycetes. Analisis kimia tubuh buahnya telah mengungkapkan adanya senyawa antibakteri dan penghambat enzim. Sebelumnya dikenal sebagai Coprinus micaceus, spesies ini dipindahkan ke Coprinellus pada tahun 2001 karena analisis filogenetik memberikan dorongan untuk reorganisasi banyak spesies yang sebelumnya dikelompokkan bersama dalam genus Coprinus. Berdasarkan penampilan luar, C. micaceus hampir tidak dapat dibedakan dari C. truncorum, dan disarankan bahwa banyak laporan tentang koleksi yang sebelumnya mungkin sebenarnya adalah C. truncorum.
    </string>
    <string name="index3">Coprinus comatus, dikenal sebagai topi tinta berbulu lebat, wig pengacara, atau surai berbulu lebat, adalah jamur umum yang sering ditemukan tumbuh di halaman, sepanjang jalan berkerikil, dan area limbah. Badan buah muda berwarna putih dan berbentuk silinder muncul dari tanah, kemudian tutup berbentuk lonceng terbuka ke luar. Tutupnya berwarna putih dan ditutupi sisik, dengan insang yang awalnya putih, berubah merah muda, lalu hitam, dan akhirnya melarut menjadi cairan hitam berisi spora, memberikan nama "tutup tinta" pada jamur ini. Jamur ini cepat menghitam dan larut dalam hitungan jam setelah dipetik atau sporanya disebarkan.
    \n\n
        Ketika masih muda, jamur ini enak dimakan jika dikonsumsi segera setelah dipetik karena ketahanannya buruk akibat proses autodigestion pada insang dan tutupnya. Untuk penyimpanan jangka panjang, jamur bisa dimasak dengan microwave, ditumis, atau direbus hingga lembut, kemudian disimpan di lemari es selama beberapa hari atau dibekukan. Menaruh jamur dalam segelas air es juga dapat menunda pembusukan selama satu atau dua hari. Pemrosesan atau pembekuan harus dilakukan dalam empat hingga enam jam setelah panen untuk mencegah perubahan yang tidak diinginkan. Spesies ini dibudidayakan di Tiongkok sebagai makanan.
    </string>
    <string name="index4">Amanita yang indah ini tersebar luas dan umum di Amerika Utara bagian timur. Jamur ini dapat dikenali dari pangkal batangnya yang tidak mencolok (tanpa volva berbentuk kantong atau ciri khas lainnya); tutupnya yang berwarna kuning kecokelatan hingga cokelat kusam, dihiasi dengan kutil yang awalnya berwarna kuning tetapi berubah menjadi abu-abu hingga cokelat muda seiring perkembangan; dan kecenderungannya berubah warna menjadi merah muda hingga merah mawar (itulah sebabnya kadang disebut "Blusher" dalam panduan lapangan). Spesies Amanita "blushing" lainnya di Amerika Utara bagian timur, Amanita flavorubescens, memiliki tutup berwarna kuning cerah, dengan kutil yang tetap kuning sepanjang perkembangan. Amanita rubescens var. alba memiliki tutup berwarna putih. Versi barat dari Amanita rubescens adalah Amanita novinupta.
     \n\n
        Versi Amanita rubescens di Amerika Utara bagian timur mungkin tidak sama secara filogenetik dengan Amanita rubescens asli dari Eropa. Sebenarnya mungkin ada beberapa spesies yang belum dinamai di Amerika Utara bagian timur; studi mendetail tentang kelompok ini diperlukan, meskipun ahli Amanita Rod Tulloss telah menyediakan dokumentasi awal untuk beberapa versi Amanita rubescens di Amerika Utara bagian timur dengan nama sementara "Amanita amerirubescens."
    </string>
</resources>