<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.recipe.detail.DetailRecipeActivity">

    <LinearLayout
        android:id="@+id/Linear_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="17dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_left"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_left"
            android:src="@drawable/arrow_left" />

        <ImageButton
            android:id="@+id/btn_fav"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="290dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_left"
            android:src="@drawable/heart_fav" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/Linear_top"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/tv_detail_recipe_image"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="10dp"
                    app:civ_border_width="4dp"
                    app:civ_border_color="@color/white"
                    android:src="@drawable/tumis_jamur" />

                <TextView
                    android:id="@+id/detail_name_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/inter_bold"
                    android:padding="7dp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/name_fungus" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/_bahan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/_recipe"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/_time"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"

                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ic_time"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/time"
                        android:src="@drawable/time_circle" />
                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:text="@string/waktu_masak" />

                    <ImageView
                        android:id="@+id/ic_porsi"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/time"
                        android:src="@drawable/ic_profile" />
                    <TextView
                        android:id="@+id/tv_porsi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_porsi" />

                </LinearLayout>

                <TextView
                    android:id="@+id/bahan_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_bahan"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_background"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_membuat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/cara_membuat"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_recipe"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/detail_recipe"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>