<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    style="@style/CustomCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="5dp"
    app:cardCornerRadius="16dp"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/tv_recipe_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/recipe_info"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/tumis_jamur" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_shape"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/name_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|start"
                    android:layout_margin="5dp"
                   android:padding="4dp"
                    android:text="@string/recipe_name"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/recipe_favorit"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/favorite"
                    android:src="@drawable/heart_fav"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="@id/card_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/food_price"
                    app:layout_constraintVertical_bias="1.0" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_detail_recipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="15dp"
            android:ellipsize="end"
            android:fontFamily="@font/inter"
            android:maxLines="2"
            android:text="@string/recipe_description"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/card_image"
            app:layout_constraintTop_toBottomOf="@id/card_image"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>